--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-architect
-title: [YUKIYUKI Portforio*]
-description: [YUKIYUKIのポートフォリオ]
+title: [Kiui Portforio*]
+description: [キウイのポートフォリオ]
