--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-architect
-title: [Kiui Portforio*]
-description: [キウイのポートフォリオ]
+title: [AgathaKiwi Portforio*]
+description: [阿笠キウイのポートフォリオ]
